# NV-Line-Agent

./: .env.example  README.md  main.py  pyproject.toml  redate-commits.py  reproduce_summarize.py  system-design.mmd
evals/: iteration-1.ipynb
helper/: llm_output_schema_config.py  prompts.py  state_config.py  tools.py  ui.py  utils.py
phases/: lead_researcher.py  research_scope.py  researcher.py
phases/research_execution/: lead_researcher.py  researcher.py  writer.py
