[project]
name = "nv-line-agent"
version = "0.1.0"
description = "NV Line Agent for deep research and report generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "tavily-python>=0.5.0",
    "supabase>=2.0.0",
]
